--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -1,8 +1,7 @@
 /**
  * Various tweaks to the Read the Docs theme to better conform with Godot's
- * visual identity. Many colors are also overridden to use CSS variables.
- * This makes it possible to provide an automatically-used dark theme
- * based on browser preferences.
+ * visual identity. Many colors are also overridden to use CSS variables,
+ * making it possible to provide a dark theme.
  */
 
  /* Default (light) theme colors */
@@ -70,71 +69,69 @@
 }
 
 /* Dark theme colors */
-@media (prefers-color-scheme: dark) {
-    :root {
-        --body-color: rgba(255, 255, 255, 0.85);
-        --content-wrap-background-color: #202326;
-        --content-background-color: #2e3236;
-        /* Decrease the logo opacity when using the dark theme to be less distracting */
-        --logo-opacity: 0.85;
-        --navbar-background-color: #25282b;
-        --navbar-background-color-hover: #333639;
-        --navbar-background-color-active: #111417;
-        --navbar-current-background-color: #333639;
-        --navbar-current-background-color-hover: #44474a;
-        --navbar-current-background-color-active: #222528;
-        --navbar-level-1-color: #ddd;
-        --navbar-level-2-color: #ccc;
-        --navbar-level-3-color: #bbb;
-        --navbar-heading-color: #ee7381;
+body.dark {
+    --body-color: rgba(255, 255, 255, 0.85);
+    --content-wrap-background-color: #202326;
+    --content-background-color: #2e3236;
+    /* Decrease the logo opacity when using the dark theme to be less distracting */
+    --logo-opacity: 0.85;
+    --navbar-background-color: #25282b;
+    --navbar-background-color-hover: #333639;
+    --navbar-background-color-active: #111417;
+    --navbar-current-background-color: #333639;
+    --navbar-current-background-color-hover: #44474a;
+    --navbar-current-background-color-active: #222528;
+    --navbar-level-1-color: #ddd;
+    --navbar-level-2-color: #ccc;
+    --navbar-level-3-color: #bbb;
+    --navbar-heading-color: #ee7381;
 
-        --link-color: #8cf;
-        --link-color-hover: #9df;
-        --link-color-active: #6ad;
-        --link-color-visited: #cb99f6;
+    --link-color: #8cf;
+    --link-color-hover: #9df;
+    --link-color-active: #6ad;
+    --link-color-visited: #cb99f6;
 
-        --hr-color: #555;
-        --table-row-odd-background-color: #3b3e41;
-        --code-background-color: #434649;
-        --code-border-color: #505356;
-        --code-literal-color: #faa;
-        --input-background-color: #333537;
-        --input-focus-border-color: #5f8cff;
+    --hr-color: #555;
+    --table-row-odd-background-color: #3b3e41;
+    --code-background-color: #434649;
+    --code-border-color: #505356;
+    --code-literal-color: #faa;
+    --input-background-color: #333537;
+    --input-focus-border-color: #5f8cff;
 
-        /* Colors taken from the Godot script editor with the Adaptive theme */
-        --highlight-background-color: #202531;
-        --highlight-comment-color: rgba(204, 206, 211, 0.5);
-        --highlight-keyword-color: #ff7085;
-        --highlight-keyword2-color: #42ffc2;
-        --highlight-number-color: #a1ffe0;
-        --highlight-decorator-color: #abc8ff;
-        --highlight-type-color: #8effda;
-        --highlight-type2-color: #c6ffed;
-        --highlight-function-color: #57b3ff;
-        --highlight-operator-color: #abc8ff;
-        --highlight-string-color: #ffeca1;
+    /* Colors taken from the Godot script editor with the Adaptive theme */
+    --highlight-background-color: #202531;
+    --highlight-comment-color: rgba(204, 206, 211, 0.5);
+    --highlight-keyword-color: #ff7085;
+    --highlight-keyword2-color: #42ffc2;
+    --highlight-number-color: #a1ffe0;
+    --highlight-decorator-color: #abc8ff;
+    --highlight-type-color: #8effda;
+    --highlight-type2-color: #c6ffed;
+    --highlight-function-color: #57b3ff;
+    --highlight-operator-color: #abc8ff;
+    --highlight-string-color: #ffeca1;
 
-        --admonition-note-background-color: #303d4f;
-        --admonition-note-color: #bfeeff;
-        --admonition-note-title-background-color: #305070;
-        --admonition-note-title-color: #bfefff;
-        --admonition-attention-background-color: #444033;
-        --admonition-attention-color: #ffeeaf;
-        --admonition-attention-title-background-color: #665022;
-        --admonition-attention-title-color: #ffeeaf;
-        --admonition-danger-background-color: #433;
-        --admonition-danger-color: #fcc;
-        --admonition-danger-title-background-color: #633;
-        --admonition-danger-title-color: #fcc;
-        --admonition-tip-background-color: #28382d;
-        --admonition-tip-color: #dfd;
-        --admonition-tip-title-background-color: #336648;
-        --admonition-tip-title-color: #dfd;
+    --admonition-note-background-color: #303d4f;
+    --admonition-note-color: #bfeeff;
+    --admonition-note-title-background-color: #305070;
+    --admonition-note-title-color: #bfefff;
+    --admonition-attention-background-color: #444033;
+    --admonition-attention-color: #ffeeaf;
+    --admonition-attention-title-background-color: #665022;
+    --admonition-attention-title-color: #ffeeaf;
+    --admonition-danger-background-color: #433;
+    --admonition-danger-color: #fcc;
+    --admonition-danger-title-background-color: #633;
+    --admonition-danger-title-color: #fcc;
+    --admonition-tip-background-color: #28382d;
+    --admonition-tip-color: #dfd;
+    --admonition-tip-title-background-color: #336648;
+    --admonition-tip-title-color: #dfd;
 
-        --btn-neutral-background-color: #404040;
-        --btn-neutral-hover-background-color: #505050;
-        --footer-color: #aaa;
-    }
+    --btn-neutral-background-color: #404040;
+    --btn-neutral-hover-background-color: #505050;
+    --footer-color: #aaa;
 }
 
 body,
